Added blob feature

--- a/hw6/jaffe_hw6.ipynb
+++ b/hw6/jaffe_hw6.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,9 +203,7 @@
     "    # blobs\n",
     "    elif feature_name in ['blobs_dog', 'blobs_doh', 'blobs_log']:\n",
     "        return calc_numBlobs(img_ndarray, feature_name)\n",
-    "      \n",
-    "    # circle-find: hough circle transform in skimage\n",
-    "    # Daisy\n",
+    "    \n",
     "    # color cross-correlation\n",
     "    elif feature_name in ['RG_corr', 'GB_corr', 'RB_corr']:\n",
     "        return calc_colorCorr(img_ndarray, feature_name)\n",
@@ -256,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,13 +263,12 @@
     "import numpy as np\n",
     "import time\n",
     "\n",
-    "#dumb features to set up pipeline\n",
     "features = [\n",
     "            # Corners and edges\n",
     "            'num_FASTcorners', 'edgeSumAvg', 'num_ShiTomasi_corners',\n",
     "            \n",
     "            # blobs\n",
-    "            #'blobs_dog', 'blobs_doh', 'blobs_log',\n",
+    "            'blobs_dog',# 'blobs_doh', 'blobs_log',\n",
     "            \n",
     "            # color cross-correlation\n",
     "            'RG_corr', 'GB_corr', 'RB_corr',\n",
@@ -290,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +338,7 @@
       "....................................................................................................\n",
       "....................................................................................................\n",
       "............................................\n",
-      "Calculated 19 features for 4244 images in 414.78 s\n"
+      "Calculated 20 features for 4244 images in 2154.7 s\n"
      ]
     },
     {
@@ -369,12 +366,12 @@
        "      <th>num_FASTcorners</th>\n",
        "      <th>edgeSumAvg</th>\n",
        "      <th>num_ShiTomasi_corners</th>\n",
+       "      <th>blobs_dog</th>\n",
        "      <th>RG_corr</th>\n",
        "      <th>GB_corr</th>\n",
        "      <th>RB_corr</th>\n",
        "      <th>avg_R</th>\n",
        "      <th>avg_G</th>\n",
-       "      <th>avg_B</th>\n",
        "      <th>...</th>\n",
        "      <th>R_std_total</th>\n",
        "      <th>G_std_total</th>\n",
@@ -395,12 +392,12 @@
        "      <td>159</td>\n",
        "      <td>6.391525</td>\n",
        "      <td>25</td>\n",
+       "      <td>75</td>\n",
        "      <td>0.977236</td>\n",
        "      <td>0.977236</td>\n",
        "      <td>0.977236</td>\n",
        "      <td>149.408592</td>\n",
        "      <td>148.160234</td>\n",
-       "      <td>140.587114</td>\n",
        "      <td>...</td>\n",
        "      <td>76.126850</td>\n",
        "      <td>79.652049</td>\n",
@@ -419,12 +416,12 @@
        "      <td>16</td>\n",
        "      <td>4.619186</td>\n",
        "      <td>2</td>\n",
+       "      <td>25</td>\n",
        "      <td>0.988975</td>\n",
        "      <td>0.988975</td>\n",
        "      <td>0.988975</td>\n",
        "      <td>61.931454</td>\n",
        "      <td>68.196050</td>\n",
-       "      <td>72.891277</td>\n",
        "      <td>...</td>\n",
        "      <td>40.904979</td>\n",
        "      <td>41.114958</td>\n",
@@ -443,12 +440,12 @@
        "      <td>174</td>\n",
        "      <td>7.865308</td>\n",
        "      <td>25</td>\n",
+       "      <td>187</td>\n",
        "      <td>0.973527</td>\n",
        "      <td>0.973527</td>\n",
        "      <td>0.973527</td>\n",
        "      <td>75.804963</td>\n",
        "      <td>94.221250</td>\n",
-       "      <td>84.071525</td>\n",
        "      <td>...</td>\n",
        "      <td>60.125605</td>\n",
        "      <td>59.666652</td>\n",
@@ -467,12 +464,12 @@
        "      <td>4</td>\n",
        "      <td>1.522002</td>\n",
        "      <td>14</td>\n",
+       "      <td>59</td>\n",
        "      <td>0.987985</td>\n",
        "      <td>0.987985</td>\n",
        "      <td>0.987985</td>\n",
        "      <td>71.609828</td>\n",
        "      <td>74.130844</td>\n",
-       "      <td>64.048658</td>\n",
        "      <td>...</td>\n",
        "      <td>58.972949</td>\n",
        "      <td>55.929306</td>\n",
@@ -491,12 +488,12 @@
        "      <td>46</td>\n",
        "      <td>4.707972</td>\n",
        "      <td>7</td>\n",
+       "      <td>28</td>\n",
        "      <td>0.987575</td>\n",
        "      <td>0.987575</td>\n",
        "      <td>0.987575</td>\n",
        "      <td>54.888630</td>\n",
        "      <td>56.712100</td>\n",
-       "      <td>47.096968</td>\n",
        "      <td>...</td>\n",
        "      <td>59.584329</td>\n",
        "      <td>60.357416</td>\n",
@@ -515,12 +512,12 @@
        "      <td>17</td>\n",
        "      <td>6.676133</td>\n",
        "      <td>2</td>\n",
+       "      <td>19</td>\n",
        "      <td>0.982320</td>\n",
        "      <td>0.982320</td>\n",
        "      <td>0.982320</td>\n",
        "      <td>83.435792</td>\n",
        "      <td>82.722788</td>\n",
-       "      <td>77.099855</td>\n",
        "      <td>...</td>\n",
        "      <td>61.823232</td>\n",
        "      <td>60.097276</td>\n",
@@ -539,12 +536,12 @@
        "      <td>504</td>\n",
        "      <td>12.132882</td>\n",
        "      <td>25</td>\n",
+       "      <td>125</td>\n",
        "      <td>0.965936</td>\n",
        "      <td>0.965936</td>\n",
        "      <td>0.965936</td>\n",
        "      <td>81.894575</td>\n",
        "      <td>110.468668</td>\n",
-       "      <td>77.327394</td>\n",
        "      <td>...</td>\n",
        "      <td>59.696392</td>\n",
        "      <td>65.742029</td>\n",
@@ -563,12 +560,12 @@
        "      <td>13</td>\n",
        "      <td>6.898652</td>\n",
        "      <td>2</td>\n",
+       "      <td>20</td>\n",
        "      <td>0.986774</td>\n",
        "      <td>0.986774</td>\n",
        "      <td>0.986774</td>\n",
        "      <td>124.003571</td>\n",
        "      <td>133.906990</td>\n",
-       "      <td>113.513789</td>\n",
        "      <td>...</td>\n",
        "      <td>70.052752</td>\n",
        "      <td>75.491394</td>\n",
@@ -587,12 +584,12 @@
        "      <td>87</td>\n",
        "      <td>4.619749</td>\n",
        "      <td>6</td>\n",
+       "      <td>43</td>\n",
        "      <td>0.992151</td>\n",
        "      <td>0.992151</td>\n",
        "      <td>0.992151</td>\n",
        "      <td>95.764196</td>\n",
        "      <td>77.646441</td>\n",
-       "      <td>84.449106</td>\n",
        "      <td>...</td>\n",
        "      <td>65.728718</td>\n",
        "      <td>72.481515</td>\n",
@@ -611,12 +608,12 @@
        "      <td>116</td>\n",
        "      <td>6.235746</td>\n",
        "      <td>14</td>\n",
+       "      <td>120</td>\n",
        "      <td>0.977857</td>\n",
        "      <td>0.977857</td>\n",
        "      <td>0.977857</td>\n",
        "      <td>114.562175</td>\n",
        "      <td>121.172825</td>\n",
-       "      <td>88.831871</td>\n",
        "      <td>...</td>\n",
        "      <td>64.704859</td>\n",
        "      <td>65.720042</td>\n",
@@ -631,7 +628,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>10 rows × 21 columns</p>\n",
+       "<p>10 rows × 22 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -647,29 +644,29 @@
        "gorilla_0014.jpg   gorilla               87    4.619749   \n",
        "gorilla_0038.jpg   gorilla              116    6.235746   \n",
        "\n",
-       "                  num_ShiTomasi_corners   RG_corr   GB_corr   RB_corr  \\\n",
-       "gorilla_0016.jpg                     25  0.977236  0.977236  0.977236   \n",
-       "gorilla_0002.jpg                      2  0.988975  0.988975  0.988975   \n",
-       "gorilla_0003.jpg                     25  0.973527  0.973527  0.973527   \n",
-       "gorilla_0017.jpg                     14  0.987985  0.987985  0.987985   \n",
-       "gorilla_0001.jpg                      7  0.987575  0.987575  0.987575   \n",
-       "gorilla_0015.jpg                      2  0.982320  0.982320  0.982320   \n",
-       "gorilla_0029.jpg                     25  0.965936  0.965936  0.965936   \n",
-       "gorilla_0028.jpg                      2  0.986774  0.986774  0.986774   \n",
-       "gorilla_0014.jpg                      6  0.992151  0.992151  0.992151   \n",
-       "gorilla_0038.jpg                     14  0.977857  0.977857  0.977857   \n",
+       "                  num_ShiTomasi_corners  blobs_dog   RG_corr   GB_corr  \\\n",
+       "gorilla_0016.jpg                     25         75  0.977236  0.977236   \n",
+       "gorilla_0002.jpg                      2         25  0.988975  0.988975   \n",
+       "gorilla_0003.jpg                     25        187  0.973527  0.973527   \n",
+       "gorilla_0017.jpg                     14         59  0.987985  0.987985   \n",
+       "gorilla_0001.jpg                      7         28  0.987575  0.987575   \n",
+       "gorilla_0015.jpg                      2         19  0.982320  0.982320   \n",
+       "gorilla_0029.jpg                     25        125  0.965936  0.965936   \n",
+       "gorilla_0028.jpg                      2         20  0.986774  0.986774   \n",
+       "gorilla_0014.jpg                      6         43  0.992151  0.992151   \n",
+       "gorilla_0038.jpg                     14        120  0.977857  0.977857   \n",
        "\n",
-       "                       avg_R       avg_G       avg_B  \\\n",
-       "gorilla_0016.jpg  149.408592  148.160234  140.587114   \n",
-       "gorilla_0002.jpg   61.931454   68.196050   72.891277   \n",
-       "gorilla_0003.jpg   75.804963   94.221250   84.071525   \n",
-       "gorilla_0017.jpg   71.609828   74.130844   64.048658   \n",
-       "gorilla_0001.jpg   54.888630   56.712100   47.096968   \n",
-       "gorilla_0015.jpg   83.435792   82.722788   77.099855   \n",
-       "gorilla_0029.jpg   81.894575  110.468668   77.327394   \n",
-       "gorilla_0028.jpg  124.003571  133.906990  113.513789   \n",
-       "gorilla_0014.jpg   95.764196   77.646441   84.449106   \n",
-       "gorilla_0038.jpg  114.562175  121.172825   88.831871   \n",
+       "                   RB_corr       avg_R       avg_G  \\\n",
+       "gorilla_0016.jpg  0.977236  149.408592  148.160234   \n",
+       "gorilla_0002.jpg  0.988975   61.931454   68.196050   \n",
+       "gorilla_0003.jpg  0.973527   75.804963   94.221250   \n",
+       "gorilla_0017.jpg  0.987985   71.609828   74.130844   \n",
+       "gorilla_0001.jpg  0.987575   54.888630   56.712100   \n",
+       "gorilla_0015.jpg  0.982320   83.435792   82.722788   \n",
+       "gorilla_0029.jpg  0.965936   81.894575  110.468668   \n",
+       "gorilla_0028.jpg  0.986774  124.003571  133.906990   \n",
+       "gorilla_0014.jpg  0.992151   95.764196   77.646441   \n",
+       "gorilla_0038.jpg  0.977857  114.562175  121.172825   \n",
        "\n",
        "                                        ...                          \\\n",
        "gorilla_0016.jpg                        ...                           \n",
@@ -731,10 +728,10 @@
        "gorilla_0014.jpg  ../../downloads/hw6_data/gorilla/gorilla_0014.jpg  \n",
        "gorilla_0038.jpg  ../../downloads/hw6_data/gorilla/gorilla_0038.jpg  \n",
        "\n",
-       "[10 rows x 21 columns]"
+       "[10 rows x 22 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -783,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +795,7 @@
        "            warm_start=False)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -824,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -833,11 +830,11 @@
      "text": [
       "Most important 3 features\n",
       "-------------------------\n",
-      "Feature           :   Importance\n",
+      "Feature                 :   Importance\n",
       "--------------------------------\n",
-      "edgeSumAvg        :   0.0674\n",
-      "num_FASTcorners   :   0.0625\n",
-      "avg_B             :   0.0614\n"
+      "blobs_dog               :   0.0706\n",
+      "edgeSumAvg              :   0.0616\n",
+      "num_FASTcorners         :   0.0548\n"
      ]
     }
    ],
@@ -864,14 +861,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.19425287  0.21254355  0.2134434   0.21454112  0.19975787]\n"
+      "[ 0.2137931   0.24041812  0.21816038  0.21573302  0.20823245]\n"
      ]
     }
    ],
@@ -884,12 +881,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "About 10x better than random guessing! (which would be 0.02, or 1/50)"
+    "A bit over 10x better than random guessing! (which would be 0.02, or 1/50)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -910,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
